force-app/main/default/objects/Competitor__c/fields/Competitor_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Bid_Amount__c</fullName>
    <label>Competitor Bid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>