force-app/main/default/objects/Competitor__c/fields/Construction_Job__c.field-meta.xml
<CustomField>
    <fullName>Construction_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Job</label>
    <referenceTo>Construction_Job__c</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>